[gd_scene load_steps=2 format=3 uid="uid://djd85005dvf4k"]

[ext_resource type="Script" uid="uid://hgl6q3rdnpbl" path="res://code/components/signal_connection.gd" id="1_duust"]

[node name="SignalConnection" type="Area3D"]
collision_layer = 8
collision_mask = 8
script = ExtResource("1_duust")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
